# gh-actions

./: .pre-commit-config.yaml  README.md  setup.cfg  setup.py
.github/workflow/: cron.yaml  deploy.yaml  test.yaml
.github/workflows/: container.yaml  cron.yaml  deploy.yaml  env-var.yaml  parallel.yaml  sharevar.yaml  test.yaml
ghaction/: __init__.py
tests/: test_ghactions.py
