[metadata]
name = ghaction
author = Ganesh Hubale
author-email = ganeshhubale03@gmail.com
maintainer = Ganesh Hubale
maintainer_email = ganeshhubale03@gmail.com
license_file = LICENSE
description = Learning GitHub actions
keywords =
    gh
    action
url = https://github.com/ganeshhubale/gh-actions
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: MIT

[options]
package_dir =
    =src
packages = find:
zip_safe = False
setup_requires = setuptools_scm
include_package_data = True

[options.packages.find]
where = src

[flake8]
ignore = E128,E811,W503,E203
max-line-length = 100
